--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,6 +7,106 @@ body {
   background-color: lightgray;
   margin: 0px;
 }
+
+h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+nav {float: right;
+background-color: #ffffff;
+color: darkgray;
+margin-right: 240px;
+margin-top: 33px;
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.container {
+margin: auto;
+width: 50%;
+width: 960px;
+height: 100%;
+background-color:#ffffff;
+color:#777777;
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+h2 {
+  padding-left: 16px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h3 h4 h5 {
+font-family: Georgia, 'Times New Roman', Times, serif
+}
+
+hr {
+  background-color: gray;
+  width: 95%;
+  height: 5px;
+}
+
+
+#bio {float: left;
+  margin-top: 0px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+  max-width: 68%;
+}
+footer {
+  height: 50px;
+  background-color: #666666;
+  width: 100%;
+  border-top: 10px solid teal;
+  text-align: center;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  padding-top: 10px;
+}
+
+
+input[type=text]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 5px 0;
+  box-sizing: border-box;
+  font-size: 16px;
+  border: 2px solid #ccc;
+  }
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    margin: 5px 0;
+  }
+  form {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  input[type=submit] {
+    background-color: teal;
+    color: white;
+    height: 50px;
+    width: 100px;
+    font-size: 20px;
+    border: 2px solid #ccc;
+  }
+
+  #portfoliobox {
+    position: relative;
+    margin: auto;
+    width: 50%;
+    width: 960px;
+    height: 800px;
+    background-color:#ffffff;
+    color:#777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    }
+h3 {font-family: Georgia, 'Times New Roman', Times, serif;
+}
   .box{
       position: relative;
       display: inline-block; 
@@ -22,47 +122,3 @@ body {
     width: 87.5%;
     color: #ffffff;
     background: teal;}
-
-  #hangman {
-    float: left;
-    width: 300px;
-    height: 200px;
-    margin-top: 10px;
-    margin-right: 20px;
-    margin-bottom: 20px; 
-  }
-  #rpggame {    
-    float: left;
-    width: 300px;
-    height: 200px;
-    margin-top: 10px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-  }
-  #triviagame {
-    float: left;
-    width: 300px;
-    height: 200px;
-    margin-top: 10px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    clear: left;
-  }
-  #rutgersinfowidget {    
-    float: left;
-    width: 300px;
-    height: 200px;
-    margin-top: 10px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-  }
-#rockpaperscissors {
-  float: left;
-  width: 300px;
-  height: 200px;
-  margin-top: 10px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  clear: left;
-}
-
