--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -35,6 +35,12 @@ h2 {
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+.customtext {
+    width: 94%;
+    right: 0%;
+    left: 4%;
+    position: absolute;
+}
 h3 h4 h5 {
 font-family: Georgia, 'Times New Roman', Times, serif
 }
